@@ -53,6 +53,8 @@ azure-storage = "*"
 django-basicauth = "*"
 django-post-office = "*"
 django-celery-email = "*"
+"xhtml2pdf" = "*"
+pisa = "*"
 
 [dev-packages]
 "flake8" = ">=3.6.0"
