@@ -3,3 +3,4 @@ from .microsoft.json import MSJSONRenderer  # noqa
 from .microsoft.xml import MSXmlRenderer  # noqa
 from .xls import XLSXRenderer  # noqa
 from .html import HTMLRenderer  # noqa
+from .pdf import PDFRenderer  # noqa
